--- a/Final_Manuscript.tex
+++ b/Final_Manuscript.tex
@@ -113,25 +113,25 @@ Empirical evidence has only found links between objectification,
 self-objectification, and negative outcomes for women within
 interpersonal interactions between male-female pairs. The purpose of the
 present study was to extend past research and consider the relationships
-between such valuable phenomena and their effects on authenticity within
-interactions between female pairs. Women were brought into the
-laboratory and interacted in same-sex dyads. Dyadic analysis was
-utilized to detect whether partners' objectification of each other
-affected state self-objectification, and the resulting feelings of
-comfort and authenticity during the interaction. After the interaction,
-participants completed a questionnaire which measured many constructs
-including cognitive performance, career aspirations, and relationship
-agency. Results revealed no significant relationship between
-self-objectification and authenticity. Further, although there were
-significantly negative effects on career aspirations and relationship
-agency resulting from a lack of relationship authenticity, there was no
-evidence that this is due to feelings of sexual objectification. The
-significant partner effect of objectification on actor
-self-objectification suggests that women being objectified by other
-women still results in feelings of self-objectification, and such
-research has powerful implications for the ways that women interact in
-both sexual and non-sexual settings. AUTHOR NOTE: mention Clark trigram
-coders Hannah et al.
+between objectification and self-objectification within interactions
+between female pairs. Women were brought into the laboratory and
+interacted in same-sex dyads. Dyadic analysis was utilized to detect
+whether partners' objectification of each other affected state
+self-objectification, as well as the resulting feelings of comfort and
+authenticity during the interaction. After the interaction, participants
+completed a questionnaire measuring, among other things, cognitive
+performance, career aspirations, and relationship agency. Results
+revealed a significant positive effect of being objectified by a female
+partner on women's self-objectification. There was no significant
+relationship between self-objectification and authenticity. Further,
+although there were significantly negative effects on career aspirations
+and relationship agency resulting from a lack of relationship
+authenticity, there was no evidence that this is due to feelings of
+sexual objectification. The significant partner effect of
+objectification on actor self-objectification suggests that women being
+objectified by other women may result in feelings of
+self-objectification, and such research has powerful implications for
+the ways that women interact in both sexual and non-sexual settings.
 
 
 }
@@ -142,10 +142,10 @@ coders Hannah et al.
 Roberts and Fredrickson (1997) Objectification Theory, suggests that, in
 addition to being steeped in a culture that objectifies women, women are
 objectified in actual interpersonal encounters. The negative effects of
-this interpersonal objectification might be the strongest when it is a
-man doing the objectifying (Gervais, Vescio, \& Allen, 2011), but what
-are the consequences when a woman objectifies another woman in an
-interaction? Psychological researchers studying the sexual
+this interpersonal objectification are theorized be the strongest when
+it is a man doing the objectifying (Gervais, Vescio, \& Allen, 2011),
+but what are the consequences when a woman objectifies another woman in
+an interaction? Psychological researchers studying the sexual
 objectification of women, have in recent years explored the
 interpersonal process of the objectification, finding evidence for
 self-objectification in the target as a proximal consequence (Garcia,
@@ -190,79 +190,51 @@ effect experiences of feeling like a body, or state self-objectification
 \subsection{Women Objectifying Women}\label{women-objectifying-women}
 
 Harsey and Zurbriggen (2020) found that self-objectification was related
-to the objectification of women to a similar degree for men and women
-participants (although men scored higher than women on a measure of
-belief that objectification of women is natural for men). Additionally,
-Strelan and Hargreaves (2005) found that the more women self-objectify,
-the more they objectify other women. Could the process work in the other
-direction as well, that is, could objectification by a woman produce
-self-objectification, in a similar manner to mixed-gender interactions?
-
-{[}Asha comment on next paragraph: Hill and Fischer (2008) assessed
-women's experiences of objectification from men separately from women's
-experiences of objectification from women, and found that women may be
-socialized not only to see themselves as objects, but perhaps to see
-other women as objects as well, although this process was not comfirmed
-to occur during an actual interpersonal interaction
-
-Could this sentence be written like:
-
-Though, when Hill and Fischer(2008) assessed women's experiences of
-objectification from men independently from that of women, they found
-that women are likely to be socialized to not only to see themselves s
-objects, but potentially see other women as objects as well. This
-process ,however, was not confirmed to occur during an interpersonal
-interaction.{]}
+to the objectification of women to a similar degree for men and women.
+Additionally, Strelan and Hargreaves (2005) found that the more women
+self-objectify, the more they objectify other women. Could the process
+work in the other direction as well, that is, could objectification by a
+woman produce self-objectification, in a similar manner to mixed-gender
+interactions?
 
 Past research has focused on men's objectifying behaviors, with little
 attention paid to the role that women may also play in objectifying
 other women. Hill and Fischer (2008) assessed women's experiences of
-objectification from men separately from women's experiences of
-objectification from women and found that women may be socialized not
-only to see themselves as objects but perhaps to see other women as
-objects as well, although this process was not comfirmed to occur during
-an actual interpersonal interaction. Loughnan et al. (2015a) found that
-women objectify other women to a greater extent than they objectify men.
-Women have also been found to objectify (dehumanized) sexualized targets
-presented as images (Puvia \& Vaes, 2013), but very little is known
-about interpersonal sexual objectification among women and what the
-proximal effects of this objectification might be. We do know that
-objectification has more adverse consequences for women than men
-(Gervais et al., 2011; Moradi \& Huang, 2008; Saguy, Quinn, F Dovidio,
-\& Pratto, 2010), however, if women objectify other women, perhaps even
-to a stronger degree than they objectify men, this higher level of
-objectification might be a detrimental combination.
+objectification from men independently from women's experiences of
+objectification from other women. They found that women may be
+socialized not only to see themselves as objects, but perhaps to see
+other women as objects as well. This process, however, was not comfirmed
+to occur during an actual interpersonal interaction. Loughnan et al.
+(2015a) found that women objectify other women to a greater extent than
+they objectify men. Women have also been found to objectify
+(dehumanized) sexualized targets presented as images (Puvia \& Vaes,
+2013), but very little is known about interpersonal sexual
+objectification among women and what the proximal effects of this
+objectification might be. We do know that objectification has more
+adverse consequences for women than men (Gervais et al., 2011; Moradi \&
+Huang, 2008; Saguy, Quinn, F Dovidio, \& Pratto, 2010), however, if
+women objectify other women, perhaps even to a stronger degree than they
+objectify men, this woman to woman objectification might have
+detrimental outcomes.
 
 \subsection{Interpersonal
 Objectification}\label{interpersonal-objectification}
 
 Studies have shown that within social encounters women are gazed at more
-than men (Briton \& Hall, 1995), and often times feel \enquote{looked
-at} within interpersonal interactions (Argyle \& Williams, 1969;
-Miles-McLean et al., 2015), and will more than likely internalize the
+than men (Briton \& Hall, 1995), often times feel \enquote{looked at}
+within interpersonal interactions (Argyle \& Williams, 1969;
+Miles-McLean et al., 2015), and are likely to internalize the
 objectifying gaze on their physical self (Puvia \& Vaes, 2013; Young,
-1979). Moreover, perhaps the most adverse effect is that it socializes
-girls and women to treat themselves as objects to be looked at and
-evaluated (Bartky, 1990; Berger, Cohen, \& Zelditch Jr, 1972; B. L.
-Fredrickson et al., 1998). Gervais et al. (2020) recently reviewed the
-research on interpersonal objectification and organized our current
-theoretical understanding of this process in the Social Interaction
-Model of Objectification (SIMO). What is clear from Gervais et al.
-(2020) is that we know little about women-on-women interpersonal
-objectification. Could there also be negative consequences of this type
-of interpersonal objectification? Perhaps women could be amplifying each
-others' state self-objectification as they get ready to go out for the
-night {[}EDIT??{]}, \emph{before} the theoretical encounters with men
-organized in the SIMO occur. In this way, women's rituals of getting
-ready together might place even women with low TSO in a higher SSO
-group. {[}Kat: This has me thinking about the difference between
-objectification in a romantic setting (which was the setting created in
-the initial experiment) vs objectification in a platonic setting/between
-friends. Might be useful to discuss this difference, or just have a
-sentence here that clarifies objectification can occur within non-sexual
-settings{]} {[}Asha: I think this is a great way to illustrate the
-potential experience but when I read it I was kind of like
-\enquote{wait, when did we talk about women going out?}{]}
+1979). Moreover, perhaps the most adverse effect is that being
+objectified socializes girls and women to treat themselves as objects to
+be looked at and evaluated (Bartky, 1990; Berger, Cohen, \& Zelditch Jr,
+1972; B. L. Fredrickson et al., 1998). Gervais et al. (2020) recently
+reviewed the research on interpersonal objectification and organized our
+current theoretical understanding of this process in the Social
+Interaction Model of Objectification (SIMO). What is clear from Gervais
+et al. (2020)'s review is that we know little about women-on-women
+interpersonal objectification. Could there also be negative consequences
+of this type of interpersonal objectification?
 
 Interpersonal objectification can also occur within the context of
 romantic relationships, in addition to interactions with strangers.
@@ -279,18 +251,17 @@ romantic relationships (Meltzer, 2020), but less is known about first
 dates. An important caveat to this literature is that it is only about
 heterosexual relationships. A recent study has investigated the effect
 of self-objectification on the reduction of relationship building skills
-in general (including same-sex friendships) {[}CITE PWQ paper I
-reviewed, Yoder editor{]}. Both romantic relationships and stranger
-encounters have been studied in the context of objectification, but
-neither of these literatures have investigated specifically same-gender
-relationships.
+in general (including same-sex friendships) (Terán, Jiao, \& Aubrey,
+2020). Both romantic relationships and stranger encounters have been
+studied in the context of objectification, but neither of these
+literatures have investigated specifically same-gender relationships.
 
 There is evidence that the experience of state self-objectification in
 mixed-gender contexts (stranger and romantic) has negative consequences
 for women, but what about in the context of interactions with other
 women? Is the self-objectification experienced in mixed-gender
 interactions associated with the same negative process as that
-experienced in same-gender interactions? On the one hand, there is ample
+experienced in same-gender interactions? On the one hand, the ample
 research demonstrating that the male gaze has a particularly detrimental
 effect would suggest no (Gay \& Castano, 2010; Gervais et al., 2011;
 Saguy et al., 2010, Calogero (2004); Yilmaz \& Bozo, 2019), but on the
@@ -305,33 +276,32 @@ consequences for authenticity in that interaction?
 Authenticity}\label{interpersonal-objectification-and-authenticity}
 
 There is some evidence that reduced authenticity is a consequence of
-self-objectification in the moment {[}Garcia et al. (2016); again CITE
-PWQ paper I reviewed, Yoder editor{]}. This link has been justified by
-the literature on stigmatized-stigmatizer interactions (M. R. Hebl \&
-Dovidio, 2005; Richeson \& Shelton, 2003; Shelton, Richeson, \&
-Salvatore, 2005), viewing the experience of being objectified in an
-interaction as an identity threat situation (Miles-McLean et al., 2015;
-Nadal \& Haynes, 2012). Further, empirical evidence reveals that
-objectification manifests through inauthenticity in romantic
-relationships (Brunell et al., 2010), adverse attitudes in regard to
-career aspirations, and a decrease in concentration and impairment in
-female cognitive performance (Kahalon, Shnabel, \& Becker, 2018; D. M.
-Quinn, Chaudoir, \& Kallen, 2011). When a woman is objectified by a man,
-and subsequently experiences self-objectification, the intergroup nature
-of this encounter might trigger identity threat. Thus, perhaps there are
-fewer negative consequences when a woman is objectified by another
-woman, specifically, woman-woman interpersonal objectification processes
-might diverge from mix-gender interpersonal objectification processes
-precisely because they are not intergroup interactions (at least with
-respect to gender identity). A woman objectified by another woman may
-not be having the same negative consequences that cascade from
-situations that trigger group-based identity threat (Deaux \& Major,
-1987; Dovidio, Hebl, Richeson, \& Shelton, 2006; M. R. Hebl \& Dovidio,
-2005), but feeling like a body, rather than a full human, in any
-interaction (intergroup or ingroup) may be enough to reduce women's
-feelings of authenticity and social competence, regardless of the gender
-of the objectifyer {[}Tolman, Impett, Tracy, and Michael (2006); PWQ
-paper I reviewed, Yoder editor{]}.
+self-objectification (Garcia et al., 2016; Terán et al., 2020). This
+link has been justified by the literature on stigmatized-stigmatizer
+interactions (M. R. Hebl \& Dovidio, 2005; Richeson \& Shelton, 2003;
+Shelton, Richeson, \& Salvatore, 2005), viewing the experience of being
+objectified in an interaction as an identity threat situation
+(Miles-McLean et al., 2015; Nadal \& Haynes, 2012). Further, empirical
+evidence reveals that objectification manifests through inauthenticity
+in romantic relationships (Brunell et al., 2010), adverse attitudes in
+regard to career aspirations, and a decrease in concentration and
+impairment in female cognitive performance (Kahalon, Shnabel, \& Becker,
+2018; D. M. Quinn, Chaudoir, \& Kallen, 2011). When a woman is
+objectified by a man, and subsequently experiences self-objectification,
+the intergroup nature of this encounter might trigger identity threat.
+Thus, perhaps there are fewer negative consequences when a woman is
+objectified by another woman, specifically, woman-woman interpersonal
+objectification processes might diverge from mix-gender interpersonal
+objectification processes precisely because they are not intergroup
+interactions (at least with respect to gender identity). A woman
+objectified by another woman may not be having the same negative
+consequences that cascade from situations that trigger group-based
+identity threat (Deaux \& Major, 1987; Dovidio, Hebl, Richeson, \&
+Shelton, 2006; M. R. Hebl \& Dovidio, 2005), but feeling like a body,
+rather than a full human, in any interaction (intergroup or ingroup) may
+be enough to reduce women's feelings of authenticity and social
+competence, regardless of the gender of the objectifyer (Terán et al.,
+2020; Tolman, Impett, Tracy, \& Michael, 2006).
 
 \subsection{The Current Study}\label{the-current-study}
 
@@ -345,28 +315,31 @@ literature on woman-woman objectification is small, the results are
 mixed, and does not cover interpersonal encourters, we expected to
 replicate some of the results found in Garcia et al. (2016). Most
 importantly, we predicted that being objectified by one's interaction
-partner would lead to self-objectification. We also expected, in line
-with Garcia et al. (2016), that TSO would moderate this relationship,
-amplifying the positive assocaition between being objectified and SSO
-for women higher in TSO. We hypothesized that SSO would, in turn, lead
-to feelings of inauthenticity (although there is ample support against
-this prediction from the identity threat within intergroup interactions
-literature; Rollero, 2016). Further, we hypothesized that these feelings
-of inauthencity would then be associated with reduced feelings of agency
-in romantic relationships, reduced career aspiration, and reduced
-cognitive performance. In summary, we expected to find a positive
-relationship between other-objectification by one's partner and state
+partner would lead to self-objectification. We also expected that TSO
+would moderate this relationship, amplifying the positive assocaition
+between being objectified and SSO for women higher in TSO. We
+hypothesized that SSO would, in turn, lead to feelings of inauthenticity
+(although there is ample support against this prediction from the
+identity threat within intergroup interactions literature; Rollero,
+2016). Further, we hypothesized that these feelings of inauthencity
+would then be associated with reduced feelings of agency in romantic
+relationships, reduced career aspiration, and reduced cognitive
+performance. In summary, we expected to find a positive relationship
+between other-objectification by one's partner and state
 self-objectification. We also expected to find a negative relationship
 between self-state objectification and interaction authenticity, and
 that interaction authenticity will be positively related to cognitive
 performance, relationship agency, and career aspirations.
+
+These hypotheses are considered exploratory, given the lack of prior
+research theorizing about these linkages.
 
 Here we would like to note that Puvia and Vaes (2013) would
 alternatively predict that women's tendency to self-objectify (TSO)
 leads them to objectify other women (more precisely, to dehumanize a
 sexualized woman). In addition, Strelan and Hargreaves (2005) and Harsey
 and Zurbriggen (2020) would predict the TSO to other-objectification
-link, further theorezing that this relationships is mediated by the
+link, further theorizing that this relationships is mediated by the
 woman's own state self-objectification (SSO). This limited, but extant,
 set of literature on woman-woman objectification points to a possible
 alternative model from the model hypothesized in the current study.
@@ -414,11 +387,11 @@ that this prompt would keep the study closest to a replication of the
 previous Garcia et al. (2016) version of the study, and strengthen the
 potential for objectification that would normally be low in the context
 of a psychology laboratory. Recall that, past research has found that
-women are indeed able to evaluate other women's potential as romantic
-partners {[}i.e., their sexual attractiveness; CITE{]}---indeed, women
-may be unfortunately quite used to thinking about their own
-\enquote{datability,} and we suspect this this habitual thought pattern
-will translate to their thoughts about other women.
+heterosexual women are indeed able to evaluate other women's potential
+as romantic partners (i.e., their sexual attractiveness; Puvia \& Vaes,
+2013)---indeed, women may be unfortunately quite used to thinking about
+their own \enquote{datability,} and we suspect this this habitual
+thought pattern will translate to their thoughts about other women.
 
 After recieving the \enquote{College Relationships} prompt, the two
 participants were then brought into a larger interaction room where they
@@ -431,39 +404,37 @@ set of post-interaction measures. Participants were then thanked for
 their participation and debriefed. More detail on this methodology can
 be found in Garcia et al. (2016).
 
-\subsection{Combined Samples}\label{combined-samples}
+\subsection{Participants}\label{participants}
 
-Data from two different, but demographically equivalent, samples were
-combined to create the final analysis sample (\emph{N =} 64) used in
-this study. In the measures section that follows we refer to them as
-Sample 1 and Sample 2. Thirty-two previously unacquainted
-self-identifying female-sex dyads (64 total participants) from two
-liberal arts institutions in the Northeast of the United States
-participated in this study. Sample 1 (\emph{N =} 24) is from a co-ed
-liberal arts college in the northeast US and Sample 2 (\emph{N =} 40) is
-from a women's liberal arts college in the northeast US. More
-specifically, twelve of the pairs, which derived from Sample 1, were
-students at a co-ed liberal arts college, while the remaining twenty
-pairs who came from Sample 2 attended a women's liberal arts college.
+Data from two demographically equivalent higher education institutions
+in the Northeast United States were combined to create the final
+analysis sample (\emph{N =} 64) used in this study. In the measures
+section that follows we refer to them as Sample 1 and Sample 2.
+Thirty-two previously unacquainted self-identifying female dyads (64
+total participants) from institutions in the Northeast of the United
+States participated in this study. Sample 1 (\emph{N =} 24) is from a
+co-ed liberal arts college and Sample 2 (\emph{N =} 40) is from a
+women's liberal arts college. More specifically, twelve of the pairs
+were students at a co-ed liberal arts college, while the remaining
+twenty pairs attended a women's liberal arts college. {[}Footnote:
 Initially, data was collected from same-sex and mixed-sex dyads that
 comprised of male and female gendered individuals. Sample 1 originally
 consisted of twenty-two pairs, twelve men and thirty-two women.
 Twenty-three pairs made up of forty-three women and one man, as well as
 two participants who did not identify with either gender category,
 formed Sample 2. For consistency, we limited participant data to same
-sex female pairs at the two colleges.
+sex female pairs at the two colleges.{]} All results presented below are
+from models including sample as a control variable.
 
-Due to these similarities across samples in regard to correlation
-patterns between significant variables within this study, the two
-datasets were combined. These participants were mostly first-year
-college students, with an average age of 18.85 (SD = 1.04). The sample
-was 48.44\% White/European American, 9.38\% Black/African-American,
-28.12\% Asian/Pacific Islander, 9.38\% Latinx, and 4.69\% mixed-race.
-There were 8 White/White pairs and 4 same race racial minority pairs,
-for a total of 12 same-race pairs. The remaining 20 were mixed race
-pairs, of which 15 were White/racial minority pairings and 5 were
-cross-racial minority group pairs. 64.06\% of the sample identified as
-heterosexual, and 25\% identified as gay, lesbian or bisexual.
+The participants were mostly first-year college students, with an
+average age of 18.85 (SD = 1.04). The sample was 48.44\% White/European
+American, 9.38\% Black/African-American, 28.12\% Asian/Pacific Islander,
+9.38\% Latinx, and 4.69\% mixed-race. There were 8 White/White pairs and
+4 same race racial minority pairs, for a total of 12 same-race pairs.
+The remaining 20 were mixed race pairs, of which 15 were White/racial
+minority pairings and 5 were cross-racial minority group pairs. 64.06\%
+of the sample identified as heterosexual, and 25\% identified as gay,
+lesbian or bisexual.
 
 \subsection{Post interaction Measures}\label{post-interaction-measures}
 
@@ -534,7 +505,7 @@ partner's internal traits such as personality, friends, family, and
 extracurricular interests, as well as external traits such as body,
 appearance, clothing, and body parts. All questions were rated on a
 scale from 1 (not at all) to 7 (constantly). Objectification was
-measured by getting the difference between the average frequency of
+measured by taking the difference between the average frequency of
 thought about their partner's external traits (\(\alpha\) = 0.79 for
 Sample 1, \(\alpha\) = 0.79 for Sample 2) and frequency of thought about
 their partner's internal traits (\(\alpha\) = 0.79 for Sample 1,
@@ -656,76 +627,53 @@ the R-packages \emph{papaja} (Version 0.1.0.9842; Aust \& Barth, 2018),
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=400px]{2016_figure} \caption{Path Analysis Model from Garcia et al. (2016) study with distinguishable dyads.}\label{fig:2016figure}
+\includegraphics[width=400px]{theor_figure} \caption{Path Analysis Model from Garcia et al. (2016) study with distinguishable dyads.}\label{fig:theorfigure}
 \end{figure}
 
-This study sought to replicate the results of Garcia et al. (2016)'s
-study, done with male-female pairs, which used a dyadic path analysis to
-detect whether partners' objectification of one another affected state
-self-objectification (SSO). See Figure~\ref{fig:2016figure} for the
-results of the analysis from this previous study. We investigated how
-the central effects found in the previous study relate to interactions
-between two women. Specifically, we are interested in testing the
-relationship between state-other objectification and SSO, and how SSO in
-turn, affects feelings of inauthenticity during the interaction. In
-addition, we will also test if the effect of other-objectification in an
-interaction on SSO is only present for those women who are high in trait
-self-objectification, as in Garcia et al. (2016). Further, we will
-investigate the relationships between experiencing interaction
-inauthenticity and relationship agency, career aspirations, and
-cognitive performance. {[}Asha: This section feels like a mixture of
-explaining what the study was intended to investigate as wel as future
-directions. Is that the point, or can this be organized better?{]}
+This study sought to detect whether partners' objectification of one
+another affected state self-objectification (SSO). Specifically, we were
+interested in testing the relationship between state-other
+objectification and SSO, and how SSO in turn, affects feelings of
+inauthenticity during the interaction. In addition, we also tested if
+the effect of other-objectification in an interaction on SSO is only
+present for those women who are high in trait self-objectification.
+Further, we investigated the relationships between experiencing
+interaction inauthenticity and relationship agency, career aspirations,
+and cognitive performance.
 
-While Garcia et al. (2016) used dyadic path analysis, the current study
-used multilevel modeling for our dyadic analyses. Dyadic analyses for
-distinguishable dyads (e.g., mixed-gender interacting pairs) is more
-natural in Structural Equation Modeling (SEM) than it is for
-indistinguishable dyads (e.g., same-gender interacting pairs) (Garcia,
+While past studies investigating objectification in interactions used
+dyadic path analysis (Garcia et al., 2016), the current study used
+multilevel modeling proceedures. Dyadic analyses for distinguishable
+dyads (e.g., mixed-gender interacting pairs) is more natural in
+Structural Equation Modeling (SEM) than it is for indistinguishable
+dyads (e.g., same-gender interacting pairs), as we have here (Garcia,
 Kenny, \& Ledermann, 2015; Ledermann \& Kenny, 2017). One reason for
 this asymmetry is that, due to the arbitrary distinctions made between
 \enquote{partner 1} and \enquote{partner 2} in indistinguishable dyads,
 many estimates need to be fixed to be equal (i.e., paths, variances,
-covariances, endogenous intercepts, and exogenous means) for
-indistinguishable dyads but these equality constraints should not then
-be considered in the degrees of freedom calculations for fit estimations
-(Olsen \& Kenny, 2006). Further, Olsen and Kenny (2006) detail how a new
-independence model and the corresponding fit measure should be
-re-calculated for indistinguishable dyads models. The current study uses
-dyadic multilevel modeling (MLM) to test all relationships and mediation
-patterns. The online supplementary materials contains analysis using
-SEM. See Ledermann and Kenny (2017) for a more complete discussion of
-the considerations for using SEM versus MLM for dyadic analysis.
+covariances, endogenous intercepts, and exogenous means), but these
+equality constraints should not then be considered in the degrees of
+freedom calculations for fit estimations (Olsen \& Kenny, 2006).
+Further, Olsen and Kenny (2006) details how a new independence model and
+the corresponding fit measure should be re-calculated for
+indistinguishable dyads models. The current study uses dyadic multilevel
+modeling (MLM) to test all relationships and mediation patterns. The
+online supplementary materials contains analysis using SEM. See
+Ledermann and Kenny (2017) for a more complete discussion of the
+considerations for using SEM versus MLM for dyadic analysis.
 
-Testing the Garcia et al. (2016) model on the current, same-gender,
-sample, involves using the Actor-Partner Independence Model (APIM)
-approach for each outcome variable (i.e., endogenous variable in
-Figure~\ref{fig:2016figure}). Thus, we ran five APIM's to test all the
+Testing our hypotheses in the current, same-gender, sample, involves
+using the Actor-Partner Independence Model (APIM) approach for each
+outcome variable (i.e., endogenous variable in
+Figure~\ref{fig:theorfigure}). Thus, we ran five APIM's to test all the
 hypothesized relationships. See Figure~\ref{fig:apim} for a basic APIM
 model. The APIM includes effects due to one's own, as well as one's
 partner's, predictor variables (\(X\)'s) on the one's own outcome
-variable (\(Y\)). Unlike the original Garcia et al. (2016) study, our
-study deals with indistinguishable dyads, meaning the designation of who
-is designated as \enquote{actor} and who is designated as
-\enquote{partner} is arbitrary. Recall that the indistinguishable nature
-of the dyads in the current study led us to choose the MLM approach over
-SEM. These analyses are considered exploratory, given the lack of prior
-research theorizing about these linkages.
-
-Before moving to the main analyses, we discuss statistical equivalence
-tests that provide support for combining Sample 1 and Sample 2 in one
-analysis sample. The online supplemental material contains the main
-analyses separated by samples. All results presented below are from
-models including sample as a control variable.
-
-\subsubsection{Combining Samples}\label{combining-samples}
-
-The correlations between study variables is similar across samples. The
-reliabilities for the study scales were also equivalent. (Note that the
-two samples were two small to conduct formal measurement equivalence
-tests for scales.) There are no statistically significant differences
-between samples in demographics including age, STATS, and ethnicity,
-STATS.
+variable (\(Y\)). The current study deals with indistinguishable dyads,
+meaning the designation of who is designated as \enquote{actor} and who
+is designated as \enquote{partner} is arbitrary. These analyses are
+considered exploratory, given the lack of prior research theorizing
+about these linkages.
 
 \subsection{Main Results}\label{main-results}
 
@@ -788,10 +736,6 @@ partner's other objectification on career aspirations, \emph{b} = -0.06,
 relationship agency, \emph{b} = -0.05, \emph{SE} = 0.11, \emph{p} =
 .659, and no direct effect of partner's other objectification on
 relationship agency, \emph{b} = -0.1, \emph{SE} = 0.11, \emph{p} = .365.
-
-The results were similar for analyses conducted on Sample 1 and Sample 2
-individually. See the online supplemental material for more detail on
-these analyses.
 
 \section{Discussion}\label{discussion}
 
@@ -880,7 +824,7 @@ variables. This evidence of a relationship between authenticity and the
 relational outcome variables (i.e., relationship agency and career
 aspirations) provides evidence that corroborates past findings that felt
 authenticity in interactions is important for healthy relationship
-functioning {[}Garcia et al. (2016); PWQ paper I reviewed{]}. Just as
+functioning (Garcia et al., 2016; Terán et al., 2020). Just as
 authenticity has been found to be important in intergroup interactions
 (Brunell et al., 2010; Garcia et al., 2016; Tolman et al., 2006), we
 again find more evidence here that disruptions in feelings of
@@ -966,6 +910,12 @@ to the degree exhibited by men; that is, men were found to objectify
 women significantly more than women objectify other women (Strelan \&
 Hargreaves, 2005).
 
+Objectification among platonic friends: Perhaps women could be
+amplifying each others' state self-objectification \emph{before} the
+theoretical encounters with men organized in the SIMO occur. In this
+way, women's rituals of getting ready together might place even women
+with low TSO in a higher SSO group.
+
 \subsubsection{Sexism and Sexual
 Discrimination}\label{sexism-and-sexual-discrimination}
 
@@ -1024,10 +974,7 @@ social relationships and well-being. We did not find a significant
 effect between actor SSO and felt authenticity in the interaction, which
 suggests that there is not sufficient evidence to support the claim that
 partner objectification is the cause for the diverse range of negative
-effects related to interaction inauthenticity. (Move to here: Perhaps
-women could be amplifying each others' self-objectification as they get
-ready to go out for the night, \emph{before} the theoretical encounters
-with men outlined in Gervais et al., 2020 occur.)
+effects related to interaction inauthenticity.
 
 \section{References}\label{references}
 
@@ -1391,6 +1338,12 @@ Everyday sexism: Evidence for its incidence, nature, and psychological
 impact from three daily diary studies. \emph{Journal of Social Issues},
 \emph{57}(1), 31--53.
 doi:\href{https://doi.org/10.1111/0022-4537.00200}{10.1111/0022-4537.00200}
+
+\hypertarget{ref-teran2020relational}{}
+Terán, L., Jiao, J., \& Aubrey, J. S. (2020). The relational burden of
+objectification: Exploring how past experiences of interpersonal sexual
+objectification are related to relationship competencies. \emph{Sex
+Roles}, 1--16.
 
 \hypertarget{ref-tolman2006looking}{}
 Tolman, D. L., Impett, E. A., Tracy, A. J., \& Michael, A. (2006).
